[gd_scene load_steps=11 format=2]

[ext_resource path="res://mods-unpacked/otDan-ItemExplorer/ui/menus/items/parts/item_toggle.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://mods-unpacked/otDan-ItemExplorer/ui/menus/items/item_explorer.gd" type="Script" id=3]
[ext_resource path="res://ui/menus/ingame/item_panel_ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/fonts/actual/base/font_smallest_text.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/fonts/actual/base/font_small_button.tres" type="DynamicFont" id=6]
[ext_resource path="res://mods-unpacked/otDan-ItemExplorer/ui/menus/items/parts/character_toggle.tscn" type="PackedScene" id=7]
[ext_resource path="res://mods-unpacked/otDan-ItemExplorer/resources/themes/itemexplorer-mod_menu_theme.theme" type="Theme" id=8]
[ext_resource path="res://items/global/info.png" type="Texture" id=9]
[ext_resource path="res://mods-unpacked/otDan-BetterModList/resources/themes/bettermodlist-mod_menu_theme.theme" type="Theme" id=10]

[node name="ItemExplorer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 45
custom_constants/margin_top = 45
custom_constants/margin_left = 45
custom_constants/margin_bottom = 45
script = ExtResource( 3 )
item_toggle = ExtResource( 1 )
character_toggle = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 45.0
margin_top = 45.0
margin_right = 1875.0
margin_bottom = 1035.0
theme = ExtResource( 8 )
custom_constants/separation = 16

[node name="SortingOptionsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1830.0
margin_bottom = 51.0

[node name="SearchContainer" type="PanelContainer" parent="VBoxContainer/SortingOptionsContainer"]
margin_right = 260.0
margin_bottom = 51.0
rect_min_size = Vector2( 260, 0 )

[node name="Search" type="LineEdit" parent="VBoxContainer/SortingOptionsContainer/SearchContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 255.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
align = 1
clear_button_enabled = true
placeholder_text = "Search"
placeholder_alpha = 0.35

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 1830.0
margin_bottom = 909.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.313726 )
margin_right = 309.0
margin_bottom = 842.0
rect_min_size = Vector2( 260, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 304.0
margin_bottom = 837.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 299.0
margin_bottom = 65.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 291.0
margin_bottom = 57.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 283.0
margin_bottom = 45.0
hint_tooltip = "Show only the mods of the specific author in the mod list. (This does not disable mods)"
theme = ExtResource( 10 )
custom_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 245.0
margin_bottom = 45.0
text = "MENU_MODS"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 253.0
margin_right = 283.0
margin_bottom = 45.0
rect_min_size = Vector2( 30, 25 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 283.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="ModContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 283.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.313726 )
margin_left = 325.0
margin_right = 1421.0
margin_bottom = 842.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1091.0
margin_bottom = 837.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1091.0
margin_bottom = 837.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 32.0
margin_bottom = 32.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/MarginContainer/CenterContainer"]
unique_name_in_owner = true
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 11

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 1437.0
margin_right = 1830.0
margin_bottom = 842.0
custom_constants/separation = 16
alignment = 1

[node name="NotUnlocked" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 196.0
margin_right = 393.0
margin_bottom = 231.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/NotUnlocked"]
margin_left = 5.0
margin_top = 5.0
margin_right = 388.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.870588, 0.243137, 0.243137, 1 )
custom_fonts/font = ExtResource( 5 )
text = "MENU_ITEM_NOT_UNLOCKED"
align = 1
valign = 1

[node name="ItemPanelUI" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = 17.0
margin_top = 247.0
margin_right = 376.0
margin_bottom = 497.0

[node name="ItemTags" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.313726 )
margin_top = 513.0
margin_right = 393.0
margin_bottom = 842.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemTags"]
margin_left = 5.0
margin_top = 5.0
margin_right = 388.0
margin_bottom = 324.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemTags/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 375.0
margin_bottom = 311.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemTags/MarginContainer/VBoxContainer"]
margin_right = 367.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 6 )
text = "MENU_TAGGED_CHARACTERS"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemTags/MarginContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 367.0
margin_bottom = 248.0
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemTags/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 359.0
margin_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemTags/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer"]
margin_right = 351.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemTags/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/CenterContainer"]
unique_name_in_owner = true
margin_left = 175.0
margin_top = 98.0
margin_right = 175.0
margin_bottom = 98.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 3

[node name="StartRunButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemTags/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 252.0
margin_right = 367.0
margin_bottom = 303.0
custom_fonts/font = ExtResource( 6 )
disabled = true
text = "MENU_START_RUN"

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 615.0
margin_top = 925.0
margin_right = 1215.0
margin_bottom = 990.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 600.0
margin_bottom = 65.0
text = "MENU_BACK"

[connection signal="text_changed" from="VBoxContainer/SortingOptionsContainer/SearchContainer/Search" to="." method="_on_Search_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/ItemTags/MarginContainer/VBoxContainer/StartRunButton" to="." method="_on_StartRunButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/BackButton" to="." method="_on_BackButton_pressed"]
